--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,38 +56,48 @@ main {
 ul {
     list-style-type: none;
 }
-
-.three {
-    padding-left: 48px;
-    padding-right: 48px;
-    height: 283px;
+.col a img:hover {
+    opacity: 0.7;
 }
-
-.three .col {
-    height: 100%;
-}
-
-.two {
-    padding-left: 48px;
-    padding-right: 48px;
-}
-
 .two .col {
     height: 100%;
 }
 
-.col a img:hover {
-    opacity: 0.7;
-}
-
-.threeacross {
-    width: 100%;
+.three .col {
+    resize: both;
+    max-width:100%;
     height: 100%;
 }
-
+.threeacross {
+    width: 100%;
+    height:100%;
+}
 .twoacross {
     width: 100%;
     height: 100%;
+}
+.crop-height{
+   overflow:hidden;
+    resize:none;
+}
+img.scale {
+  /* corrects inline gap in enclosing div */
+  display: block;
+  max-width: 100%;
+  /* just in case, to force correct aspect ratio */
+  height: auto !important;
+  width: auto\9; /* ie8+9 */
+}
+
+@media only screen and (min-width: 993px){
+  .three {
+    padding-left: 48px;
+    padding-right: 48px;
+  }  
+    .two {
+    padding-left: 48px;
+    padding-right: 48px;
+}
 }
 
 p {
@@ -102,6 +112,7 @@ p {
     padding-left: 48px;
     font-family: "Calibri", Helvetica, sans-serif;
     float: left;
+    text-align: left;
 }
 
 main.aboutme {
