Fix capitalization error in image

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -31,7 +31,7 @@ html
                   a.project-link(href='/barefoot-atlas/') Art: Barefoot Atlas
             .portfolio-column
               .image-with-box
-                img(src='/images/portfolio/large/travel.JPG', width='100%')
+                img(src='/images/portfolio/large/travel.jpg', width='100%')
                 .block-button-container
                   a.project-link(href='/travel/') Lifestyle & Travel
 
