--- a/templates/about.jade
+++ b/templates/about.jade
@@ -11,7 +11,7 @@ html
       .container
         .row
           .col-md-6
-            img.photoofme(src='/images/caitlin.JPG', alt='photo of Caitlin Fullam in sunflowers', width='100%')
+            img.photoofme(src='/images/caitlin.jpg', alt='photo of Caitlin Fullam in sunflowers', width='100%')
           .col-md-6
             p Caitlin seeks to expose and share the beauty that lives in this world through photography and storytelling.  Having travelled extensively and lived in several different countries, she is most inspired by adventure, breath-taking landscapes, chasing the unknown, the simple things, and a deep nostalgia for the places she once knew and people she has met along the way.
 
